<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    tools:context=".activity.MainActivity">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_login"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintVertical_bias="0.19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        card_view:cardBackgroundColor="#E6E6E6"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="8dp"

        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintRight_toRightOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_gradient"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:textColor="@color/blank"
                android:textSize="28sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blank"
                android:textColorHint="@color/blank"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="USER NAME"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:textColor="@color/blank"
                    android:textColorHint="@color/blank" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blank"
                android:textColorHint="@color/blank"
                app:passwordToggleEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginRight="30dp"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@color/blank"
                    android:textColorHint="@color/blank" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/btn_white_grad"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:background="@drawable/btn_circle"
                        app:srcCompat="@drawable/ic_vpn_key_black_24dp" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="66dp"
                        android:text="@string/login"
                        android:textColor="#000" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/btn_white_grad"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="3dp"
                        android:background="@drawable/btn_circle"
                        app:srcCompat="@drawable/ic_cancel_black_24dp" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="66dp"
                        android:text="@string/cancel"
                        android:textColor="#000" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/forget_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/forget_password"
        android:textColor="@color/blank"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/cv_login" />

    <TextView
        android:id="@+id/id_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:text="@string/haven_t_account_yet_sign_up"
        android:textColor="@color/blank"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/forget_pass" />

    <TextView
        android:id="@+id/abtUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="@color/blank"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/id_sign" />


</androidx.constraintlayout.widget.ConstraintLayout>